--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
-  "token": "irnt238zo44#rpl8#rrauryfp4-¬ni834a¬_e38piarsetn*£rpess¬",
-  "prefix": "!",
-  "ownerID": "User#1892"
+  "token": "MzczNDYyNTUyNjE0Nzk3MzEy.DNTFpQ.p7G3egwaAEJNG-2SKevoOBRUOds",
+  "prefix": "n!",
+  "prefix_uppercase": "N!",
+  "ownerID": "279964564630798336"
 }
