--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "discord.js": "^11.2.1",
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^0.11.0",
+    "googleapis": "^22.2.0",
     "libsodium-wrappers": "^0.5.4",
     "moment": "^2.19.1",
     "moment-duration-format": "^1.3.0",
     "node-opus": "^0.2.7",
+    "readline": "^1.3.0",
     "uws": "^0.14.5",
     "ytdl-core": "^0.18.1"
   }
