--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "token": "MzczNDYyNTUyNjE0Nzk3MzEy.DNTFpQ.p7G3egwaAEJNG-2SKevoOBRUOds",
+  "token": "yourtokenhere",
   "prefix": "n!",
   "prefix_uppercase": "N!",
-  "ownerID": "279964564630798336"
+  "ownerID": "youridhere"
 }
