--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bufferutil": "^3.0.3",
+    "cheerio": "^1.0.0-rc.2",
     "discord.js": "^11.3",
-    "ffmpeg-binaries": "^3.2.2-3",
-    "ytdl-core": "^0.19.0",
     "enmap": "^0.4.2",
     "enmap-level": "^1.0.0",
+    "ffmpeg-binaries": "^3.2.2-3",
     "fs": "0.0.1-security",
     "google-auth-library": "^0.12.0",
     "googleapis": "^24.0.0",
@@ -22,7 +22,10 @@
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.1",
     "node-opus": "^0.2.7",
+    "querystring": "^0.2.0",
     "readline": "^1.3.0",
-    "uws": "^9.14.0"
+    "snekfetch": "^3.6.3",
+    "uws": "^9.14.0",
+    "ytdl-core": "^0.19.0"
   }
 }
