--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discordbot",
-  "version": "1.7.0",
-  "description": "A Discord Bot that can do a range of things, from kicking to playing music.",
+  "version": "1.0.0",
+  "description": "A Discord Bot that can do a range of things, from banning and kicking to playing music.",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,23 +9,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bufferutil": "^3.0.3",
+    "bufferutil": "^3.0.5",
     "cheerio": "^1.0.0-rc.2",
-    "discord.js": "^11.3",
-    "enmap": "^0.4.2",
-    "enmap-level": "^1.0.0",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "discord.js": "github:discordjs/discord.js#master",
+    "enmap": "^0.4.6",
+    "enmap-level": "^1.0.1",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^3.2.2",
     "fs": "0.0.1-security",
     "google-auth-library": "^0.12.0",
     "googleapis": "^24.0.0",
     "libsodium-wrappers": "^0.5.4",
-    "moment": "^2.20.1",
-    "moment-duration-format": "^2.2.1",
-    "node-opus": "^0.2.7",
+    "moment": "^2.22.2",
+    "moment-duration-format": "^2.2.2",
+    "node-opus": "^0.2.9",
     "querystring": "^0.2.0",
     "readline": "^1.3.0",
-    "snekfetch": "^3.6.3",
-    "uws": "^9.14.0",
-    "ytdl-core": "^0.19.0"
+    "snekfetch": "^3.6.4",
+    "uws": "^9.148.0",
+    "ytdl-core": "^0.20.4"
   }
 }
